--- a/core/manpages/bareos-dir.8
+++ b/core/manpages/bareos-dir.8
@@ -58,8 +58,8 @@ Set the username/uid to run as.
 .BI \-v,--verbose
 Set verbose mode.
 .TP
-.BI \--xc,--export-config\
-Print configuration and exit.
+.BI \--xc,--export-config\ [<resource_type> [<name>]]
+Print all or specific configuration resources and exit.
 .TP
 .BI \--xs,--export-schema
 Print configuration schema in JSON format and exit.
