--- a/core/manpages/bareos-sd.8
+++ b/core/manpages/bareos-sd.8
@@ -58,7 +58,7 @@ Set the username/uid to run as.
 .BI \-v,--verbose
 Set verbose mode.
 .TP
-.BI \--xc,--export-config\
+.BI \--xc,--export-config
 Print configuration and exit.
 .TP
 .BI \--xs,--export-schema
